2930 [Audio Encoder]        fixed a crash if a very large audio delay is used
2629 [OneClick]             fixed Blu-Ray playlist processing if a track has no proper language tag (regression of 2572)
2628 [x264]                 added 16:15 to the --sar values
2627 [Main]                 detects during startup if AviSynth can be used
                            automatic fallback to the portable AviSynth
2626 [AvisynthWrapper]      updated to recent avisynth.h (requires AviSynth 2.6)
                            improved error handling
                            added x64 support
2625 [Flac Encoder]         fixed always using compression level 0 (regression of 2536)


Changelog 2525 --> 2624

Features/Changes:
[Aften Encoder]        The Aften AC-3 encoder has been removed. Please switch to FFmpeg AC-3.
[DGAVCIndex Indexer]   DGAVCIndexer has been removed. Please use another indexer.
[DGIndexIM Indexer]    DGIndexIM has been added. It is disabled by default and has to be enabled in the settings. 
                       The new default indexer order is: DGIndexNV, DGIndexIM, DGIndex, L-SMASH, FFMS
[Main]                 .NET 4.0 is now required for MeGUI
[Main]                 The support for Windows XP has been dropped
[x265 Encoder]         Added n-pass support
[Xvid Encoder]         Added support for Xvid 1.3. An additional automated step is required as the output file must be prepared with FFmpeg.


Enhancements/Fixes:
[FFMS Indexer]         disabled AVI file handling as FFMS may cause jittery motion
[HD Streams Extractor] + [MediaInfo] if a language cannot be detected or matched the default MeGUI language will be used
[HD Streams Extractor] improved feature selection & handling of unsupported tracks
[Main]                 added ~300 additional languages to select based upon ISO 639-2
[Muxer] + [OneClick]   improved language detection based on the file name
[Profile]              profiles will be saved to disk also when a profile is changed. 